--- a/内置数据结构.md
+++ b/内置数据结构.md
@@ -162,7 +162,7 @@
 
   `key, value = line.split(':', 1)`分割解包联合使用
 
-  `test.splitlines()`以换行符分割字符串
+  `test.splitlines()`以换行符分割字符串，保存为列表
 
   ***以下两个的用法和split()的用法基本一致，但处理结果不同***
 
