--- a/zabbix/自定义监控案例.md
+++ b/zabbix/自定义监控案例.md
@@ -49,25 +49,25 @@ tmpdir=/NIIS/FileRoot/live/tmpfile/
 # 移动次数日志
 mvtimesfile=/var/log/zabbix/mvtimes.log
 
-# 每秒执行一次
+# 每两秒执行一次
 while true;do
-# 初始化环境和每天重置一下日志文件
+    # 初始化环境和每天重置一下日志文件
     today=`date "+%Y-%m-%d"`
     [ -e $mvtimesfile ] && [ "today:$today" == `head -1 $mvtimesfile` ] || echo -e "today:$today\n0" > $mvtimesfile
     [ -e /var/log/zabbix/ ] || mkdir -p /var/log/zabbix/
     [ -e $tmpdir ] || mkdir -p $tmpdir
-# 循环执行以下片段，移动tmp和m3u8文件
+    # 循环执行以下片段，移动tmp和m3u8文件
     while true;do
-# 获取今天已经移动的次数
+        # 获取今天已经移动的次数
         mvtimes=`tail -1 $mvtimesfile`
 
-# 取得要移动文件的名称和移动文件
+        # 取得要移动文件的名称和移动文件
         filename=`ls $filedir |sed -rn 's@(.*)\.tmp$@\1@p'`
         tmpname=`ls $filedir |grep .*\.tmp$`
         mv -f $filedir{$filename,$tmpname} $tmpdir &> /dev/null
-    #mv -f $filedir$tmpname $filedir$filename &> /dev/null
+        #mv -f $filedir$tmpname $filedir$filename &> /dev/null
 
-# 记录日志
+        # 记录日志
         [ ! -n "$filename" ] && break
         let mvtimes++
         echo -e "today:$today\n$mvtimes" > $mvtimesfile
