--- a/zabbix/通知.md
+++ b/zabbix/通知.md
@@ -4,40 +4,35 @@
 安装python34(我使用的是阿里云的epel源)
 ```
 yum install python34 -y
-cd /usr/lib/zabbix/alertscripts/
 ```
 
-编辑脚本文件`vim sendmail.py`
+编辑脚本文件/usr/lib/zabbix/alertscripts/sendmail.py
 
 ## 第一版
-非常难用，最好使用第二版，通过第三方邮件服务发送邮件
+非常难用，这里使用的是个人邮件发送最好使用第二版通过第三方邮件服务发送邮件
 
 ```python
 #!/usr/bin/python3
 #coding: utf-8
 import smtplib
-import time
 from email.mime.text import MIMEText
 from email.header import Header
 
-nowtime = time.strftime('%Y-%m-%d-%H:%M', time.localtime(time.time()))
+_, sendto, subject, *msgbody = sys.argv
 sender = '********@21cn.com'
-receiver = ['*******@163.com']
-subject = 'ServerError at {}'.format(nowtime)
 smtpserver = 'smtp.21cn.com'
 username = sender
 password = '******'
 
-for i in receiver:
-    msg = MIMEText('ServerError at {} please fix it'.format(nowtime),'plain','gb2312')
-    msg['Subject'] = subject
-    msg['From'] = sender
-    msg['To'] = i
-    smtp = smtplib.SMTP()
-    smtp.connect(smtpserver)
-    smtp.login(username, password)
-    smtp.sendmail(sender, i, msg.as_string())
-    smtp.quit()
+msg =  MIMEText(' '.join(msgbody),'plain','gb2312')
+msg['Subject'] = subject
+msg['From'] = sender
+msg['To'] = sendto
+smtp = smtplib.SMTP()
+smtp.connect(smtpserver)
+smtp.login(username, password)
+smtp.sendmail(sender, i, msg.as_string())
+smtp.quit()
 ```
 
 
@@ -72,15 +67,18 @@ r = requests.post(url, files={}, data=params)
 # print(r.text)
 ```
 
-### 使用方法
+## 使用方法
 
 ![](pm1.png)
 
 ![](pythonmail.png)
 
 传递的参数分别为
-```
+```bash
+# 用户通知方式
 {ALERT.SENDTO}
+# 标题
 {ALERT.SUBJECT}
+# 发送的信息
 {ALERT.MESSAGE}
 ```
