--- a/内置数据结构.md
+++ b/内置数据结构.md
@@ -117,6 +117,8 @@
 
 * 查找/统计元素
 
+`hash t`
+
 #### 字符串(属于线性结构)
 
 ***python3的字符串是unicode序列，python2的字符串是byte序列,字符串是不可变的***
@@ -162,7 +164,7 @@
 
   `key, value = line.split(':', 1)`分割解包联合使用
 
-  `test.splitlines()`以换行符分割字符串
+  `test.splitlines()`以换行符分割字符串，保存为列表
 
   ***以下两个的用法和split()的用法基本一致，但处理结果不同***
 
