--- a/文本操作/文本操作.md
+++ b/文本操作/文本操作.md
@@ -96,4 +96,7 @@ option的常用参数
 -c          给每行编号显示
 -E          以扩展正则表达式的形式使用arg
 -e          使用多个arg
+-A 5 可以显示匹配内容以及后面的5行内容
+-B 5 可以显示匹配内容以及前面的5行内容
+-C 5 可以显示匹配内容以及前后面的5行内容
 ```
