--- a/mariadb/配置文件.md
+++ b/mariadb/配置文件.md
@@ -1,3 +1,5 @@
+
+```bash
 [client]
 port = 3306
 socket = /tmp/mysql.sock
@@ -170,3 +172,4 @@ key_buffer_size = 8M
 sort_buffer_size = 8M
 read_buffer = 4M
 write_buffer = 4M
+```
