--- a/系统初始化/初始化脚本.md
+++ b/系统初始化/初始化脚本.md
@@ -1,4 +1,4 @@
-
+```bash
 # 本地yum源配置
 devcdrom=`grep '/dev/cdrom /media/cdrom iso9660 defaults 0 0' /etc/fstab`
 [ -z $devcdrom ] && echo '/dev/cdrom /media/cdrom iso9660 defaults 0 0' >> /etc/fstab
@@ -46,3 +46,4 @@ sed -i s/SELINUX=enforcing/SELINUX=disabled/ /etc/selinux/config
 
 # 重启服务器
 reboot
+```
