--- a/IO/文件夹及路径操作.md
+++ b/IO/文件夹及路径操作.md
@@ -43,7 +43,7 @@ copytree 递归的复制目录， 具体使用那个copy函数，可以指定
 
 `os.listdir()`相当于`ls -a`
 
-递归遍历目录(广度遍历)
+递归遍历目录(深度优先遍历)
 ```python
 def listdir(path=None):
     if path is None:
