--- a/文件操作/文件操作.md
+++ b/文件操作/文件操作.md
@@ -1,68 +1,80 @@
+# 文件操作
 
 ## ls
 
-Ls的主要作用，是查看文件或文件夹的属性
+ls的主要作用，是查看文件或文件夹的属性
 
-```
+```bash
 ls          [option]       [dirname|filename]
 option:
-      -l           以详细格式显示
+      -l          以详细格式显示
       -a          显示全部文件
       -A          不显示.和..
       -d          不递归显示目录
       -u          反向
       -S          文件大小以小到大的顺序显示
       -R          递归
-      -i           显示inode号
-      -t           按照时间顺序
+      -i          显示inode号
+      -t          按照时间顺序
 ```
-
 
 ## touch
 
-touch不仅可以创建一个文件，同时也可以用来更改文件时间，
-```
-      -a          更改atime
-      -m         更改mtime
-      -t           指定时间格式是[[CC]YY]MMddhhmm[ss]
-      -c          文件不存在，不创建
-```
-Touch 一个已经存在的文件，该文件的内容不会变更，但是文件的atime和mtime的会更改为现在的时间。更改一个文件的时间时一般a或者m要与t命令组合才可以更改文件时间。
+touch不仅可以创建一个文件，同时也可以用来更改文件时间
 
+```bash
+      -a         更改atime
+      -m         更改mtime
+      -t         指定时间格式是[[CC]YY]MMddhhmm[ss]
+      -c         文件不存在，不创建
+```
+
+touch一个已经存在的文件，该文件的内容不会变更，但是文件的atime和mtime的会更改为现在的时间。更改一个文件的时间时一般a或者m要与t命令组合才可以更改文件时间。
 
 ## mkdir
-Mkdir创建目录，让我们上肢的招式更加复杂。文件系统就是被它的一团糟，每个目录内都放什么好难记。
-```
--p  先创建父目录
--v          显示创建过程
--m         指定权限
-```
 
+mkdir创建目录
+
+```bash
+-p          先创建父目录
+-v          显示创建过程
+-m          指定权限
+```
 
 ## cp
-Cp主要是用来复制文件和目录。复制目录时很容易复制一堆用不到的东西。
-```
--a          等于-dr
--d          保持权限
-       --preserv=
--r           递归
--f           强制
--i           交互
-```
 
+cp主要是用来复制文件和目录
+
+```bash
+-a：此参数的效果和同时指定"-dpR"参数相同；
+-d：当复制符号连接时，把目标文件或目录也建立为符号连接，并指向与源文件或目录连接的原始文件或目录；
+-f：强行复制文件或目录，不论目标文件或目录是否已存在；
+-i：覆盖既有文件之前先询问用户；
+-l：对源文件建立硬连接，而非复制文件；
+-p：保留源文件或目录的属性；
+-R/r：递归处理，将指定目录下的所有文件与子目录一并处理；
+-s：对源文件建立符号连接，而非复制文件；
+-u：使用这项参数后只会在源文件的更改时间较目标文件更新时或是名称相互对应的目标文件并不存在时，才复制文件； 
+-S：在备份文件时，用指定的后缀“SUFFIX”代替文件的默认后缀；
+-b：覆盖已存在的文件目标前将目标文件备份；
+-v：详细显示命令执行的操作。
+```
 
 ## rm
-Rm用来删除文件，。每个运维都听过一句话吧！mysql从删库到跑路，嗯，就是那么严重。
-```
+
+rm用来删除文件，。每个运维都听过一句话吧！mysql从删库到跑路，嗯，就是那么严重。
+
+```bash
 -r           递归
 -f           强制
 -i           交互
 ```
 
-
 ## mv
-Mv主要用来移动文件和更改文件名称。它就是日后陪伴我的主要工具，删除文件全用这个命令，不要怀疑这句话。
-```
+
+mv主要用来移动文件和更改文件名称。它就是日后陪伴我的主要工具，删除文件全用这个命令，不要怀疑这句话。
+
+```bash
 -r           递归
 -f           强制
 -i           交互
