--- a/文本操作/文本操作.md
+++ b/文本操作/文本操作.md
@@ -1,7 +1,10 @@
+# 文本操作
 
 ## 重定向
+
 |和重定向，灵活使用|和可以迅速找到需要操作的文件。也是因为他们导致我们写的命令特别长。
-```
+
+```bash
 |            把前一个命令的标准输出传送给下一个命令
 Tee command |       先把结果输出，然后传送输出
 >         输出重定向，把本来要输出到标准输出的结果，输出到指定的位置
@@ -10,8 +13,11 @@ Tee command |       先把结果输出，然后传送输出
 &>      2>&1 错误和标准输出都输出到指定的位置
 ```
 
-Tr转换字符，把某些字符替换为某些字符
-```
+## Tr
+
+转换字符，把某些字符替换为某些字符
+
+```bash
 -d‘’                删除引号内的对应的字符
 -c                        取反。与‘’中匹配到的内容取反。
 ‘’ ‘’           用后面的的替换前面的的内容，一个字符对应替换一个，假如前面的比后面的多，用后面最后一个替换多的字符。后面比前面多，无所谓了，2333
@@ -19,9 +25,11 @@ Tr转换字符，把某些字符替换为某些字符
 -s                        压缩某种字符
 ```
 
+## glob
 
-## glob查询大量文件的通配符
-```
+查询大量文件的通配符
+
+```bash
 ？          匹配任意单个字符
 *           匹配任意字符任意次
 ~           家目录
@@ -40,18 +48,28 @@ Tr转换字符，把某些字符替换为某些字符
 [A-C]            A,b,B,c,C
 ```
 
+## cat
 
-## cat [option] arg 查看文本的内容，它默认会把文本中的内容全部显示在命令行中。
-```
+[option] arg 查看文本的内容，它默认会把文本中的内容全部显示在命令行中。
+
+```bash
 option常用的参数
--n          显示文本是在行首加入行号
--b          空行不加行号
--A         
-arg就是我们要编辑的文本的路径
+-A, --show-all 等价于 -vET
+-b, --number-nonblank 对非空输出行编号
+-e 等价于 -vE
+-E, --show-ends 在每行结束处显示 $
+-n, --number 对输出的所有行编号
+-s, --squeeze-blank 不输出多行空行
+-t 与 -vT 等价
+-T, --show-tabs 将跳 字符显示为 ^I
+-u (被忽略)
+-v, --show-nonprinting 使用 ^ 和 M- 引用，除了 LFD 和 TAB 之外
+--help 显示此帮助信息并离开
 ```
 
 ## 行查看工具
-```
+
+```bash
 查看文本的前#行，不写-#默认查看前十行。
 head -#
 查看文本的后#行，不写默认查看文本的后十行。
@@ -59,44 +77,49 @@ tail -#
 ```
 
 ## cut [option] arg
+
 见名之意，剪切。它以后就是我们修理数据之树的剪刀。
-```
+
+```bash
 option常用的参数
 -d   ‘ ’    指定分隔符，默认是tab。日志文件的内容一般都是一段段的，只要我们适当指定分隔符，我们就可以很好的过滤数据。
--f                  只指定分隔符是不够的，我们还有指定显示哪一段
+-f          只指定分隔符是不够的，我们还有指定显示哪一段
 ```
-
 
 ## sort [option] arg
+
 排序，数据的价值往往是不一样的，我们使用cut拿到需要的数据后，我们还有分析数据找出最有价值的数据。
-```
+
+```bash
 option常用的参数
--t    ‘’      指定字段分隔符，和cut的-d类似
+-t    ‘’           指定字段分隔符，和cut的-d类似
 -k                 指定按照哪个字段排序
 -n                 安装数值大小排序，默认安装asii排序
--r                  反向显示
+-r                 反向显示
 ```
-
 
 ## uniq [option] arg
+
 统计数据，这个命令一般都在sort之后使用，因为这个命令有一个特点，它只统计连续重复的行。
-```
+
+```bash
 option常用的参数
 -c          统计数据的行数，并显示在该行重复的次数。
 -d          只显示重复的行
 -u          显示不重复的行
 ```
 
-
 ## grep它也是一个文本行查看器。之前使用的文本查看工具都有一个特点，不能查找，我们找数据都是使用剪切的方法。
+
 grep[option] ‘arg’ file
-```
+
+```bash
 option的常用参数
 -o          只显示arg匹配到的内容
 -c          给每行编号显示
 -E          以扩展正则表达式的形式使用arg
 -e          使用多个arg
--A 5 可以显示匹配内容以及后面的5行内容
--B 5 可以显示匹配内容以及前面的5行内容
--C 5 可以显示匹配内容以及前后面的5行内容
+-A 5        可以显示匹配内容以及后面的5行内容
+-B 5        可以显示匹配内容以及前面的5行内容
+-C 5        可以显示匹配内容以及前后面的5行内容
 ```
