--- a/系统初始化/初始化脚本.md
+++ b/系统初始化/初始化脚本.md
@@ -1,33 +1,35 @@
+基本系统环境准备，这个脚本需要sudo执行
 ```bash
 # 本地yum源配置
 devcdrom=`grep '/dev/cdrom /media/cdrom iso9660 defaults 0 0' /etc/fstab`
 [ -z $devcdrom ] && echo '/dev/cdrom /media/cdrom iso9660 defaults 0 0' >> /etc/fstab
+mount -a
 sed -i s/enabled=0/enabled=1/ /etc/yum.repos.d/CentOS-Media.repo
 
 # epel源配置
 [ -e /etc/yum.repos.d/epel.repo ] || cat > /etc/yum.repos.d/epel.repo <<EOF
 [epel]
-name=Extra Packages for Enterprise Linux 7 - $basearch
-baseurl=http://mirrors.aliyun.com/epel/7/$basearch
-        http://mirrors.aliyuncs.com/epel/7/$basearch
+name=Extra Packages for Enterprise Linux 7 - \$basearch
+baseurl=https://mirrors.aliyun.com/epel/7/\$basearch
+        https://mirrors.aliyuncs.com/epel/7/\$basearch
 failovermethod=priority
 enabled=1
 gpgcheck=0
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
 
 [epel-debuginfo]
-name=Extra Packages for Enterprise Linux 7 - $basearch - Debug
-baseurl=http://mirrors.aliyun.com/epel/7/$basearch/debug
-        http://mirrors.aliyuncs.com/epel/7/$basearch/debug
+name=Extra Packages for Enterprise Linux 7 - \$basearch - Debug
+baseurl=https://mirrors.aliyun.com/epel/7/\$basearch/debug
+        https://mirrors.aliyuncs.com/epel/7/\$basearch/debug
 failovermethod=priority
 enabled=0
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
 gpgcheck=0
 
 [epel-source]
-name=Extra Packages for Enterprise Linux 7 - $basearch - Source
-baseurl=http://mirrors.aliyun.com/epel/7/SRPMS
-        http://mirrors.aliyuncs.com/epel/7/SRPMS
+name=Extra Packages for Enterprise Linux 7 - \$basearch - Source
+baseurl=https://mirrors.aliyun.com/epel/7/SRPMS
+        https://mirrors.aliyuncs.com/epel/7/SRPMS
 failovermethod=priority
 enabled=0
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7
@@ -46,4 +48,39 @@ sed -i s/SELINUX=enforcing/SELINUX=disabled/ /etc/selinux/config
 
 # 重启服务器
 reboot
+```
+
+python环境准备
+```bash
+# vim配置
+[ -e ~/.vimrc ] || touch ~/.vimrc
+grep 'set ts=4' ~/.vimrc || cat > ~/.vimrc <<EOF
+set ts=4
+set expandtab
+EOF
+
+# 安装pyenv
+grep 'eval "$(pyenv init -)"' ~/.bash_profile || cat >> ~/.bash_profile <<EOF
+#在最后添加如下三行
+export PATH="~/.pyenv/bin:$PATH"
+eval "$(pyenv init -)"
+eval "$(pyenv virtualenv-init -)"
+EOF
+. ~/.bash_profile
+[ -e .pyenv ] || curl -L https://raw.githubusercontent.com/pyenv/pyenv-installer/master/bin/pyenv-installer | bash
+
+
+# 配置pip
+[ -e ~/.pip ] || mkdir ~/.pip
+[ -e ~/.pip/pip.conf ] || cat > ~/.pip/pip.conf <<EOF
+[global]
+timeout = 6000
+index-url = https://mirrors.aliyun.com/pypi/simple/
+EOF
+
+# 安装python3.5.3
+mkdir ~/.pyenv/cache
+cd .pyenv/cache
+wget https://www.python.org/ftp/python/3.5.3/Python-3.5.3.tar.xz
+pyenv install 3.5.3
 ```
