--- a/zabbix/日志分析监控案例.md
+++ b/zabbix/日志分析监控案例.md
@@ -1,6 +1,6 @@
 # 日志分析监控
 
-这篇博客的名称很难命名，前因后果是：我用python写了个日志分析脚本，使用zabbix对python分析的数据进行监控。这里脚本只是初步完成，后续还会增加功能。
+我用python写了个日志分析脚本，使用zabbix对python分析的数据进行监控。这里脚本只是初步完成，后续还会增加功能。
 
 ## zabbix配置
 
