--- a/自定义监控/自定义监控套件.md
+++ b/自定义监控/自定义监控套件.md
@@ -27,13 +27,13 @@ influxdb默认8086端口接受数据库命令`curl -POST http://localhost:8086/q
 
 输入`influx`进入数据库命令模式，输入如下命令，添加一个用户
 
-```
+```mysql
 CREATE USER admin with PASSWORD 'password' WITH ALL PRIVILEGES
 ```
 
 创建了用户之后验证
 
-```
+```bash
 curl -G http://localhost:8086/query -u admin:password  --data-urlencode "q=SHOW DATABASES"
 ```
 
@@ -45,12 +45,84 @@ curl -G http://localhost:8086/query -u admin:password  --data-urlencode "q=SHOW 
 
 ```bash
 wget https://packagecloud-prod.global.ssl.fastly.net/888/1112/el/7/package_files/229023.rpm?t=1504077159_328f7590eafe5aa0f59759ba4f3f0a6ca383c00e
+yum -y install ./grafana-4.4.0-1.x86_64.rpm
 systemctl start grafana-server.service
 ```
 
 grafana监听主机的3000端口，通过浏览器访问3000端口即可
 
-
 ## collectd
 
-数据采集，这里不介绍
+数据采集，这里不介绍了
+
+或者使用Zabbix采集数据
+
+## 日志分析监控案例
+
+```python
+#!/usr/bin/python3
+import os
+import re
+import datetime
+import threading
+import requests
+
+
+o = re.compile(r'(?P<ip>\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}) .* .* \[(?P<time>.*)\] "(?P<method>\w+) (?P<url>[^\s]*) (?P<version>[\w|/\.\d]*)" (?P<status>\d{3}) (?P<length>\d+) "(?P<referer>[^\s]*)" "(?P<ua>.*)"')
+
+def read_log(path):
+    offset = 0
+    event = threading.Event()
+    while not event.is_set():
+        with open(path) as f:
+            if offset > os.stat(path).st_size:
+                offset = 0
+            f.seek(offset)
+            yield from f
+            offset = f.tell()
+        event.wait(0.1)
+
+
+def parse(path):
+    for line in read_log(path):
+        m = o.search(line.rstrip('\n'))
+        if m:
+            data = m.groupdict()
+            yield data
+
+
+def agg(path='/usr/local/nginx/logs/access.log', interval=10):
+    count = 0
+    traffic = 0
+    error = 0
+    start = datetime.datetime.now()
+    for item in parse(path):
+        # print(item)
+        count += 1
+        traffic += int(item['length'])
+        if int(item['status']) >= 300:
+            error += 1
+        current = datetime.datetime.now()
+        # print((current - start).total_seconds())
+        if (current - start).total_seconds() >= interval:
+            error_rate = error / count
+            send(count, traffic, error_rate)
+            start = current
+            count = 0
+            #traffic = 0
+            error = 0
+
+
+def send(count, traffic, error_rate):
+    line = 'access_log count={},traffic={},error_rate={}'.format(count, traffic, error_rate)
+    #print(line)
+    requests.post('http://47.94.135.239:8086/write', auth=('admin', 'password'), data=line, params={'db': 'nginx'})
+    # if res.status_code >= 300:
+        # print(res.content)
+
+
+if __name__ == '__main__':
+    import sys
+    agg(path=sys.argv[1])
+
+```
