--- a/zabbix/微信告警.md
+++ b/zabbix/微信告警.md
@@ -1,6 +1,8 @@
 # 微信告警
 
-zabbix支持自定义报警方式，那么我们就可以借助各种常用通信工具的api进行告警，这里我使用比较常用的微信作为报警工具，当然也可以使用QQ，钉钉等作为报警工具
+zabbix支持自定义报警方式，那么我们就可以借助各种常用通信工具的api进行告警，这里我使用比较常用的微信作为报警工具，当然也可以使用QQ，钉钉等作为报警工具。
+
+这里我使用微信企业号的方式进行告警，注册微信企业号，和添加
 
 ## 报警脚本的编写
 
@@ -56,6 +58,8 @@ function body() {
 AppID对应的是Agentid
 
 ![](weixin2.png)
+
+这个页面的位置：企业应用->自建应用(创建自建应用的方法很简单，唯一需要注意的是***可见范围***，不在该可见范围里的用户，不可以给他发送消息)
 
 ### UserID和PartyID
 
