--- a/Grafana/日志分析监控.md
+++ b/Grafana/日志分析监控.md
@@ -1,6 +1,6 @@
 # 日志分析监控案例
 
-这个脚本的数据记录在influshDB中，数据聚合Grafana可以自己完成
+这个脚本的数据记录在influshDB中，数据聚合Grafana可以自己完成。这个脚本主要分析记录的数据有：访问次数count，流量traffic，错误率error_rate。访问次数可以借助influxDB显示每秒的访问次数，也就是QPS。
 
 ```python
 #!/usr/bin/python3
