--- a/Grafana/日志分析监控.md
+++ b/Grafana/日志分析监控.md
@@ -59,7 +59,7 @@ def agg(path='/usr/local/nginx/logs/access.log', interval=10):
             error = 0
 
 
-# 写数据到FlushDB
+# 写数据到influshDB
 def send(count, traffic, error_rate):
     line = 'access_log count={},traffic={},error_rate={}'.format(count, traffic, error_rate)
     #print(line)
@@ -73,3 +73,13 @@ if __name__ == '__main__':
     agg(path=sys.argv[1])
 
 ```
+
+## Grafana添加监控
+
+每秒流量
+
+![](日志分析.png)
+
+QPS
+
+![](QPS.png)
