--- a/Grafana/视频大切片发现.md
+++ b/Grafana/视频大切片发现.md
@@ -59,3 +59,18 @@ def main():
 if __name__ == '__main__':
     main()
 ```
+
+## 数据库表结构
+
+```sql
+USE `grafana`;
+
+CREATE TABLE `big_file` (
+  `file` varchar(100) DEFAULT NULL,
+  `size` varchar(20) DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=latin1;
+```
+
+## Grafana添加监控
+
+![](大切片.png)
