--- a/mariadb/数据库压测.md
+++ b/mariadb/数据库压测.md
@@ -19,15 +19,21 @@ CPU： 2核
 
 ## 第一次压测
 
-压测命令`select name,code,owner,ownerphone from terminals where ownerphone='12345678910'`
+压测命令`select name,code,owner,ownerphone from terminals where ownerphone='12345678910'`，terminals中4500条记录
 
-压测结果：0.3%左右的错误率，每秒响应数据310左右次，CPU负载是60%，100千字节左右I/O
+并发500的压测结果：每秒响应数据100次左右CPU负载是25%，0.10%左右的错误率
+
+并发1000的压测结果：每秒响应数据100次左右CPU负载是65%，4分钟后每秒响应量缓慢下降CPU负载也缓慢下降，0.10%左右的错误率
+
+并发2000的压测结果：5分钟内每秒响应数据300次左右CPU负载是65%，5分钟左右响应量忽然降到220左右CPU负载是40%，之后每秒响应量缓慢下降CPU负载也缓慢下降，20分钟左右的时候CPU使用率为30%，0.13%左右的错误率
+
+并发3000的压测结果：5分钟内每秒响应数据300次左右CPU负载是60%，5分钟左右响应量忽然降到220左右CPU负载是40%，之后每秒响应量缓慢下降CPU负载也缓慢下降，20分钟左右的时候CPU使用率为30%，0.15%左右的错误率
 
 ## 第二次压测
 
 压测命令`select name,code,owner,ownerphone from terminals where online=0 and ownerphone like '13840%';`
 
-压测结果：24.7%左右的错误率，每秒响应数据170左右次，CPU负载是40%，100千字节左右I/O
+并发500的压测结果：24.7%左右的错误率，每秒响应数据170左右次，CPU负载是40%，100千字节左右I/O
 
 ## 总结
 
